--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
@@ -85,6 +87,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.1'
 
     //firebase
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-bom:31.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
 }
