--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,6 @@
     <uses-feature
         android:glEsVersion="0x00030000"
         android:required="true" />
-    <!--
- Indicates that app requires ARCore ("AR Required"). Ensures the app is
-     visible only in the Google Play Store on devices that support ARCore.
-     For "AR Optional" apps remove this line.
-    -->
     <uses-feature
         android:name="android.hardware.camera.ar"
         android:value="required" />
@@ -30,21 +25,19 @@
             android:name="me.kristhecanadian.cyberhunt.Dashboard"
             android:exported="false"
             android:label="@string/title_activity_dashboard" />
+        <activity android:name=".Quiz"
+            android:exported="false"
+            android:label="@string/title_activity_quiz"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="me.kristhecanadian.cyberhunt.Landing"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--
-         Indicates that this app requires Google Play Services for AR ("AR Required") and causes
-             the Google Play Store to download and install Google Play Services for AR along with
-             the app. For an "AR Optional" app, specify "optional" instead of "required".
-        -->
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
