--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'com.google.mlkit:translate:17.0.0'
+    implementation 'androidx.compose.ui:ui-graphics:1.1.1'
 
 
     // Testing
@@ -87,7 +88,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.1'
 
-    //firebase
+    // firebase
     implementation 'com.google.firebase:firebase-bom:31.2.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+
+    // material design 3
+    implementation "androidx.compose.material3:material3:1.0.1"
+    implementation "androidx.compose.material3:material3-extended:1.0.1"
 }
